--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <body>
   <main>
-    <img class="bg-img" src="images/bg-desktop.png" alt="bg-desktop-img">
-    <img class="bg-mobile-img" src="images/bg-mobile.png" alt="bg-mobile-img">
+    <div>
+      <img class="bg-img" src="images/bg-desktop.png" alt="bg-desktop-img">
+      <img class="bg-mobile-img" src="images/bg-mobile.png" alt="bg-mobile-img">
+    </div>
     <div class="container">
       <div class="left-container">
         <div>
